@@ -65,9 +65,6 @@ enum outfile {
 
 enum file_types {
   ft_src,
-  ft_hex,
-  ft_lst,
-  ft_cod,
   ft_other
 };
 
@@ -175,7 +172,6 @@ extern struct gpasm_state {
     char title_name[80];	/*   given in TITLE directive */
     char subtitle_name[80];	/*   given in SUBTITLE directive */
     int tabstop;		/*   tab-stop distance */
-    struct file_context *fc;    /*   Position in the file context stack */
   } lst;
   struct {			/* Symbol file state: */
     FILE *f;			/*   Symbol file output */
